# mindmapOS

./: .env  .gitignore  README.md  agentd.py  agentd.service  agentos_flow.excalidraw  pyproject.toml  requirements.txt  setup.sh
agentic_ai/: 01-openclaw-architecture.excalidraw  01-system-architecture.excalidraw  02-replit-agent-architecture.excalidraw  02-role-guardrail-architecture.excalidraw  03-lovable-architecture.excalidraw  03-memory-architecture.excalidraw  04-landscape-gap-analysis.excalidraw  04-security-threat-model.excalidraw  05-rd-priorities-roadmap.excalidraw  06-llm-routing-component-decisions.excalidraw  07-openclaw-research-findings.excalidraw  08-master-v2-research-findings.excalidraw  08a-v2-architecture-revisions.excalidraw  08b-v2-compliance-security.excalidraw  DIAGRAMS_README.md  DOCUMENT_1_README.md  GEMINI.md  V2_DIAGRAMS_README.md  accessible_agentic_ai.docx  accessible_agentic_ai_research.excalidraw  accessible_agentic_ai_v2.docx  agentic_ai_landscape_analysis.docx  agentic_ai_landscape_analysis_pro.docx  document_1_draft.md
agentic_ai/.qwen/: settings.json
agentic_ai/docx_unpacked/docProps/: core.xml  custom.xml
agentic_ai/docx_unpacked/word/: document.xml  numbering.xml
agentos/: agentd.py  chatmanager.py
agentos/tools/: builtin_tools.py  web_search.py
apps/mindmapos/: manage.py
apps/mindmapos/memory_management/: apps.py  urls.py  views.py
backup_local_files/: .env  main.py  pyproject.toml
docs/: AgentOS_AWS_Deployment_Guide(1).docx  AgentOS_Implementation_Plan (1).docx  AgentOS_PRD_v3.docx  Client_01_The_Vision.docx  Client_02_The_Product.docx  Mindmap_OS_Implementation_Guide_Final.docx  agentic_frameworks_research.docx  linux_os_challenges_fixed_final_fixed 1.docx
docs/lagecy/: Client_03_The_Plan.docx  Mindmap_OS_Brief_Final.docx  Mindmap_OS_Report_Final.docx
mindmapos/: README.md  design.md  main.py  metadata.json  mindmapos-docs-implementation.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
mindmapos/src/: App.tsx  index.css
src/mindmap_memory/: cli.py  config.py  config.yml  utils.py
(+52 files in other folders)
